--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,5 @@
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.mjs"></script>
 </head>
-<body>
-    Frontent
-</body>
+<body></body>
 </html>
